WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120602
Interpolate between CSS filter() and cached images
https://bugs.webkit.org/show_bug.cgi?id=120602
Summary
Interpolate between CSS filter() and cached images
Dirk Schulze
Reported
2013-09-02 07:04:48 PDT
During a discussion with Simon on IRC, he mentioned that he would like to have an interpolation where the first entry is a cached-image and the second is a filter function with the same cached image as input (and the other way around). As example: from: background-image: url(image.png); to: background-image: filter(url(image.png), blur(3px)); Right now, it is just possible to interpolate between two CSS images of the same type (as specified). We should think about it more. Right now we just have url() as a cached or native image. According to the spec, url() should be replaced by image(). Image doesn't make it impossible to determine if the filtered image is the same as the cached image we want to animate to. The problem that I see is that people then will demand filter(gradient(), blur()) to gradient. And when we have that, the filter(cross-fade()) to filter(url()) or even filter(crossfade(url(image1), url(image2), 50%), blur(3px)) to image1. Nothing is impossible, but we should keep the complexity of that in mind.
Attachments
Patch
(12.45 KB, patch)
2013-09-05 13:24 PDT
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
Patch
(14.57 KB, patch)
2013-09-05 13:29 PDT
,
Dirk Schulze
simon.fraser
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch
(14.64 KB, patch)
2013-09-06 13:04 PDT
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2013-09-05 13:24:50 PDT
Created
attachment 210654
[details]
Patch
Dirk Schulze
Comment 2
2013-09-05 13:29:32 PDT
Created
attachment 210655
[details]
Patch Forgot to add change to expected result.
WebKit Commit Bot
Comment 3
2013-09-06 12:12:36 PDT
Comment on
attachment 210655
[details]
Patch Rejecting
attachment 210655
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 210655, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: t 1 with fuzz 3. patching file Source/WebCore/page/animation/CSSPropertyAnimation.cpp Hunk #1 succeeded at 177 (offset 3 lines). Hunk #2 succeeded at 197 (offset 3 lines). Hunk #3 succeeded at 206 (offset 3 lines). Hunk #4 succeeded at 216 (offset 3 lines). Hunk #5 succeeded at 314 (offset 3 lines). Hunk #6 succeeded at 330 (offset 3 lines). Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Simon Fraser']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/1708418
Dirk Schulze
Comment 4
2013-09-06 13:04:51 PDT
Created
attachment 210783
[details]
Patch
WebKit Commit Bot
Comment 5
2013-09-06 22:27:24 PDT
Comment on
attachment 210783
[details]
Patch Clearing flags on attachment: 210783 Committed
r155240
: <
http://trac.webkit.org/changeset/155240
>
WebKit Commit Bot
Comment 6
2013-09-06 22:27:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug