Source/WebCore/page/animation/CSSPropertyAnimation.cpp
@@ -177,8 +177,9 @@ static inline PassRefPtr<FilterOperation> blendFunc(const AnimationBase* anim, F
     return toOp->blend(fromOp, progress, blendToPassthrough);
 }
 
-static inline void blendFilterOperations(const AnimationBase* anim, FilterOperations& result, const FilterOperations& from, const FilterOperations& to, double progress)
+static inline FilterOperations blendFilterOperations(const AnimationBase* anim,  const FilterOperations& from, const FilterOperations& to, double progress)
 {
+    FilterOperations result;
     size_t fromSize = from.operations().size();
     size_t toSize = to.operations().size();
     size_t size = max(fromSize, toSize);
@@ -196,6 +197,7 @@ static inline void blendFilterOperations(const AnimationBase* anim, FilterOperat
                 result.operations().append(fromOp ? fromOp : identityOp);
         }
     }
+    return result;
 }
 
 static inline FilterOperations blendFunc(const AnimationBase* anim, const FilterOperations& from, const FilterOperations& to, double progress)
@@ -204,7 +206,7 @@ static inline FilterOperations blendFunc(const AnimationBase* anim, const Filter
 
     // If we have a filter function list, use that to do a per-function animation.
     if (anim->filterFunctionListsMatch())
-        blendFilterOperations(anim, result, from, to, progress);
+        result = blendFilterOperations(anim, from, to, progress);
     else {
         // If the filter function lists don't match, we could try to cross-fade, but don't yet have a way to represent that in CSS.
         // For now we'll just fail to animate.
@@ -214,23 +216,16 @@ static inline FilterOperations blendFunc(const AnimationBase* anim, const Filter
     return result;
 }
 
-static inline PassRefPtr<StyleImage> filterBlend(const AnimationBase* anim, StyleImage* from, StyleImage* to, double progress)
+static inline PassRefPtr<StyleImage> blendFilter(const AnimationBase* anim, CachedImage* image, const FilterOperations& from, const FilterOperations& to, double progress)
 {
-    CSSFilterImageValue* fromValue = static_cast<CSSFilterImageValue*>(from->data());
-    CSSFilterImageValue* toValue = static_cast<CSSFilterImageValue*>(to->data());
+    ASSERT(image);
+    FilterOperations filterResult = blendFilterOperations(anim, from, to, progress);
 
-    FilterOperations filterOperationsResult;
-    blendFilterOperations(anim, filterOperationsResult, fromValue->filterOperations(), toValue->filterOperations(), progress);
-    if (!toValue->cachedImage())
-        return to;
-
-    RefPtr<StyleCachedImage> styledImage = StyleCachedImage::create(toValue->cachedImage());
-
-    RefPtr<CSSImageValue> imageValue = CSSImageValue::create(toValue->cachedImage()->url(), styledImage.get());
-    RefPtr<CSSValue> filterValue = ComputedStyleExtractor::valueForFilter(anim->renderer(), anim->renderer()->style(),
-        filterOperationsResult, DoNotAdjustPixelValues);
+    RefPtr<StyleCachedImage> styledImage = StyleCachedImage::create(image);
+    RefPtr<CSSImageValue> imageValue = CSSImageValue::create(image->url(), styledImage.get());
+    RefPtr<CSSValue> filterValue = ComputedStyleExtractor::valueForFilter(anim->renderer(), anim->renderer()->style(), filterResult, DoNotAdjustPixelValues);
     RefPtr<CSSFilterImageValue> result = CSSFilterImageValue::create(imageValue, filterValue);
-    result->setFilterOperations(filterOperationsResult);
+    result->setFilterOperations(filterResult);
 
     return StyleGeneratedImage::create(result.get());
 }
@@ -319,10 +314,10 @@ static inline PassRefPtr<StyleImage> blendFunc(const AnimationBase* anim, StyleI
         if (fromGenerated->isFilterImageValue() && toGenerated->isFilterImageValue()) {
             // Animation of generated images just possible if input images are equal.
             // Otherwise fall back to cross fade animation.
-            CSSFilterImageValue& fromFitler = *toCSSFilterImageValue(fromGenerated);
-            CSSFilterImageValue& toFitler = *toCSSFilterImageValue(toGenerated);
-            if (fromFitler.equalInputImages(toFitler))
-                return filterBlend(anim, from, to, progress);
+            CSSFilterImageValue& fromFilter = *toCSSFilterImageValue(fromGenerated);
+            CSSFilterImageValue& toFilter = *toCSSFilterImageValue(toGenerated);
+            if (fromFilter.equalInputImages(toFilter) && fromFilter.cachedImage())
+                return blendFilter(anim, fromFilter.cachedImage(), fromFilter.filterOperations(), toFilter.filterOperations(), progress);
         }
 #endif
 
@@ -335,6 +330,24 @@ static inline PassRefPtr<StyleImage> blendFunc(const AnimationBase* anim, StyleI
 
         // FIXME: Add support for animation between two *gradient() functions.
         // https://bugs.webkit.org/show_bug.cgi?id=119956
+#if ENABLE(CSS_FILTERS)
+    } else if (from->isGeneratedImage() && to->isCachedImage()) {
+        CSSImageGeneratorValue* fromGenerated = toStyleGeneratedImage(from)->imageValue();
+        if (fromGenerated->isFilterImageValue()) {
+            CSSFilterImageValue& fromFilter = *toCSSFilterImageValue(fromGenerated);
+            if (fromFilter.cachedImage() && static_cast<StyleCachedImage*>(to)->cachedImage() == fromFilter.cachedImage())
+                return blendFilter(anim, fromFilter.cachedImage(), fromFilter.filterOperations(), FilterOperations(), progress);
+        }
+        // FIXME: Add interpolation between cross-fade and image source.
+    } else if (from->isCachedImage() && to->isGeneratedImage()) {
+        CSSImageGeneratorValue* toGenerated = toStyleGeneratedImage(to)->imageValue();
+        if (toGenerated->isFilterImageValue()) {
+            CSSFilterImageValue& toFilter = *toCSSFilterImageValue(toGenerated);
+            if (toFilter.cachedImage() && static_cast<StyleCachedImage*>(from)->cachedImage() == toFilter.cachedImage())     
+                return blendFilter(anim, toFilter.cachedImage(), FilterOperations(), toFilter.filterOperations(), progress);
+        }
+#endif
+        // FIXME: Add interpolation between image source and cross-fade.
     }
 
     // FIXME: Add support cross fade between cached and generated images.
